# ai-news-podcast-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  start-windows.bat  stop-windows.bat  简历-AI新闻播客Agent.md  项目信息表.md  项目文档-AI新闻播客Agent.md
app/: config.py  main.py
app/agents/: base_state.py
app/agents/news_collector/: collector.py  deduplicator.py  ranker.py  state.py
app/agents/playlist_manager/: concatenator.py  scheduler.py  state.py  stream_manager.py
app/agents/podcast_writer/: audio_processor.py  script_writer.py  state.py  tts_synthesizer.py
app/agents/script_writer/: state.py  writer.py
app/api/: archive.py  chat.py  health.py  model_connections.py  news.py  podcast.py  sources.py  stream.py
app/core/: constants.py  database.py  llm_factory.py
app/models/: model_connection.py  news.py  playlist.py  podcast.py  request.py
app/rag/: chroma_store.py
app/services/: audio_service.py  news_service.py  pipeline_service.py  playlist_manager_service.py  podcast_writer_service.py  stream_service.py  tts_service.py
app/sources/: base_source.py  rss_source.py  source_registry.py  web_scraper_source.py
app/tools/: audio_tools.py  news_tools.py  tts_tools.py
app/tts/: adapter_registry.py  base_adapter.py  doubao_tts_adapter.py  edge_tts_adapter.py
app/utils/: audio_utils.py  logger.py  prompt_loader.py  text_utils.py
config/: news_sources.yaml
prompts/: script_dialogue.j2  script_outline.j2
static/: app.js  chat.html  index.html  styles.css
tests/: test_prompt_loader.py  test_script_writer.py  test_tts_adapter.py
