[project]
name = "ai-news-podcast-agent"
version = "0.1.0"
description = "24/7 AI新闻播客Agent"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "sse-starlette>=1.0.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.0.20",
    "dashscope>=1.14.0",
    "openai>=1.10.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0",
    "feedparser>=6.0.0",
    "beautifulsoup4>=4.12.0",
    "edge-tts>=6.1.0",
    "pydub>=0.25.0",
    "apscheduler>=3.10.0",
    "aiosqlite>=0.18.0",
    "pyyaml>=6.0",
    "aiofiles>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["setuptools>=58.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
